feat(user): implement library card lifecycle and legacy user migration
- introduce library card generation
- evolve UserSubscribed event to v2
- propagate library card through integration events
- enrich loan projections with user information
- add library card search capabilities
- introduce LibraryCardAssignedEvent to migrate legacy users
- update tests